@@ -1,3 +1,12 @@
+2006-09-23  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GtkNSSClientAuthDialogs.h:
+	* embed/mozilla/GtkNSSKeyPairDialogs.h:
+
+	These header files were GPL v2-only while the implementation .cpp
+	files already were v2+. Thanks to crispin for agreeing to licence the
+	.h under v2+ too.
+
 2006-09-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyFind.cpp:
